--- a/6th Project-Sentiment Analysis using Twitter API.ipynb
+++ b/6th Project-Sentiment Analysis using Twitter API.ipynb
@@ -44,8 +44,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "CONSUMER_KEY = open(\"CONSUMER_KEY.txt\", \"r\").read()\n",
     "CONSUMER_SECRET = open(\"CONSUMER_SECRET.txt\", \"r\").read()\n",
@@ -63,8 +65,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "import tweepy\n",
     "from tweepy.streaming import StreamListener\n",
@@ -102,8 +106,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "stream.filter(track=[\"Trump\", \"Donald Trump\"], languages = ['en']) # -- Original\n",
     "\n",
@@ -113,8 +119,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "stream.disconnect()       # added for extended tweet\n",
     "#api.disconnect()  # original\n",
@@ -6071,26 +6079,26 @@
     }
    ],
    "source": [
-    "print(\"00\",new_data.text[0])        \n",
-    "print(\"\\n01\",new_data.text[1])      \n",
-    "print(\"\\n02\",new_data.text[2])      \n",
-    "print(\"\\n03\",new_data.text[3])      \n",
-    "print(\"\\n04\",new_data.text[4])      \n",
-    "print(\"\\n05\",new_data.text[5])      \n",
-    "print(\"\\n06\",new_data.text[6])      \n",
-    "print(\"\\n07\",new_data.text[7])      \n",
-    "print(\"\\n08\",new_data.text[8])      \n",
-    "print(\"\\n09\",new_data.text[9])      \n",
-    "print(\"\\n10\",new_data.text[10])     \n",
-    "print(\"\\n11\",new_data.text[11])     \n",
-    "print(\"\\n12\",new_data.text[12])     \n",
-    "print(\"\\n13\",new_data.text[13])     \n",
-    "print(\"\\n14\",new_data.text[14])     \n",
-    "print(\"\\n15\",new_data.text[15])     \n",
-    "print(\"\\n16\",new_data.text[16])     \n",
-    "print(\"\\n17\",new_data.text[17])     \n",
-    "print(\"\\n18\",new_data.text[18])     \n",
-    "print(\"\\n19\",new_data.text[19])     \n"
+    "print(\"00\",new_data.text[0])        # \n",
+    "print(\"\\n01\",new_data.text[1])      # \n",
+    "print(\"\\n02\",new_data.text[2])      # \n",
+    "print(\"\\n03\",new_data.text[3])      # \n",
+    "print(\"\\n04\",new_data.text[4])      # \n",
+    "print(\"\\n05\",new_data.text[5])      # \n",
+    "print(\"\\n06\",new_data.text[6])      # \n",
+    "print(\"\\n07\",new_data.text[7])      # \n",
+    "print(\"\\n08\",new_data.text[8])      # \n",
+    "print(\"\\n09\",new_data.text[9])      # \n",
+    "print(\"\\n10\",new_data.text[10])     # \n",
+    "print(\"\\n11\",new_data.text[11])     # \n",
+    "print(\"\\n12\",new_data.text[12])     # \n",
+    "print(\"\\n13\",new_data.text[13])     # \n",
+    "print(\"\\n14\",new_data.text[14])     # \n",
+    "print(\"\\n15\",new_data.text[15])     # \n",
+    "print(\"\\n16\",new_data.text[16])     # \n",
+    "print(\"\\n17\",new_data.text[17])     # \n",
+    "print(\"\\n18\",new_data.text[18])     # \n",
+    "print(\"\\n19\",new_data.text[19])     # \n"
    ]
   },
   {
