Update 6th Project-Sentiment Analysis using Twitter API.ipynb

--- a/6th Project-Sentiment Analysis using Twitter API.ipynb
+++ b/6th Project-Sentiment Analysis using Twitter API.ipynb
@@ -3032,7 +3032,7 @@
    "source": [
     "# Scatter plot using PCA (Principal Component Analysis) - PCA performs dimensionality reduction on the data. It compresses the data which takes less memory, space, and is faster to train a machine learning algorithm. Turning text into numbers using countVectorizer created more features and applying principal component analysis onto it compressed that data. \n",
     "\n",
-    "# In order to generate visualization of the text data, principal component analysis was used to turn 3,268-Dimensional data into 2-Dimensional data reducing computation time, power, and memory space."
+    "# In order to generate visualization of the text data, principal component analysis was used to turn 177,744 features into 2 features reducing computation time, power, and memory space."
    ]
   },
   {
@@ -3068,9 +3068,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Above shows principal component analysis that was performed on the training and oversampled training dataset that has 3,268 Dimensions which took 14 minutes and used a lot of memory to save this information. If visualizations are generated using all this information it will take a lot of time and resources.\n",
+    "# Above shows principal component analysis that was performed on the training and oversampled training dataset that has 177,744 features which took 14 minutes and used a lot of memory to save this information. If visualizations are generated using all this information it will take a lot of time and resources.\n",
     "\n",
-    "# Below shows principal component analysis that was performed on the same two datasets. The data was reduced from 3,268 Dimensions to 2-Dimensions, which took 1 minute and 18 seconds and used very little memory."
+    "# Below shows principal component analysis that was performed on the same two datasets. The data was reduced from 177,744 to 2 features, which took 1 minute and 18 seconds and used very little memory."
    ]
   },
   {
